# image-hash

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  db.cpp  db.h  hashdb.cpp  hashdb.h  imghash.cpp  imghash.h  jpeg.cpp  main.cpp  mvptable.cpp  mvptable.h  png.cpp  sqlitecpp.cpp  sqlitecpp.h  vcpkg.json
.github/workflows/: build.yml
